--- a/core/pom.xml
+++ b/core/pom.xml
@@ -76,6 +76,10 @@
       <artifactId>log4j</artifactId>
     </dependency>
     <dependency>
+      <groupId>net.revelc.code</groupId>
+      <artifactId>blazon</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.apache.accumulo</groupId>
       <artifactId>accumulo-fate</artifactId>
     </dependency>
